--- a/Final Project - Preliminary Report.ipynb
+++ b/Final Project - Preliminary Report.ipynb
@@ -246,9 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22, 20)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function read_csv(filename)\n",
     "    raw = CSV.read(filename, DataFrame)\n",
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -293,35 +304,35 @@
       "OPTIMAL\n",
       "8 AM Saturday:\tCurrent Student Panel\n",
       "9 AM Saturday:\tCurrent Student Panel\n",
-      "10 AM Saturday:\tAcademic Advising\n",
-      "11 AM Saturday:\tAcademic Advising\n",
-      "12 PM Saturday:\tToppers Lunch\n",
+      "10 AM Saturday:\tCurrent Student Panel\n",
+      "11 AM Saturday:\tRecwell Presentation\n",
+      "12 PM Saturday:\tJimmy Johns Lunch\n",
       "1 PM Saturday:\tAcademic Advising\n",
       "2 PM Saturday:\tAcademic Advising\n",
       "3 PM Saturday:\tAcademic Advising\n",
-      "4 PM Saturday:\tCurrent Student Panel\n",
-      "5 PM Saturday:\tCurrent Student Panel\n",
-      "6 PM Saturday:\tCurrent Student Panel\n",
-      "8 AM Sunday:\tCurrent Student Panel\n",
-      "9 AM Sunday:\tCurrent Student Panel\n",
-      "10 AM Sunday:\tAcademic Advising\n",
-      "11 AM Sunday:\tAcademic Advising\n",
+      "4 PM Saturday:\tCampus Tour\n",
+      "5 PM Saturday:\tCampus Tour\n",
+      "6 PM Saturday:\tDorm Tour\n",
+      "8 AM Sunday:\tOutside team games\n",
+      "9 AM Sunday:\tOutside team games\n",
+      "10 AM Sunday:\tOutside team games\n",
+      "11 AM Sunday:\tCampus Org Presentation\n",
       "12 PM Sunday:\tToppers Lunch\n",
-      "1 PM Sunday:\tAcademic Advising\n",
-      "2 PM Sunday:\tAcademic Advising\n",
-      "3 PM Sunday:\tAcademic Advising\n",
-      "4 PM Sunday:\tCurrent Student Panel\n",
-      "5 PM Sunday:\tCurrent Student Panel\n",
-      "6 PM Sunday:\tCurrent Student Panel\n"
+      "1 PM Sunday:\tBus Tour of Madison\n",
+      "2 PM Sunday:\tBus Tour of Madison\n",
+      "3 PM Sunday:\tSchool Jeopardy\n",
+      "4 PM Sunday:\tSett pool, climbing, and bowling\n",
+      "5 PM Sunday:\tSett pool, climbing, and bowling\n",
+      "6 PM Sunday:\tSett pool, climbing, and bowling\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "352.0"
+       "292.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,10 +356,13 @@
     "@constraint(m, [i=1:num_hours], sum(x[i,j] for j in 1:num_events) == 1)\n",
     "\n",
     "# The group cannot do an event for an unlimited amount of time\n",
-    "# @constraint(m, [j=1:num_events], sum(x[i,j] for i in 1:num_hours) == time_limits[j])\n",
+    "@constraint(m, [j=1:num_events], sum(x[i,j] for i in 1:num_hours) <= time_limits[j,2])\n",
+    "\n",
+    "# If the group does an activity, the must do it for a minimum amount of time\n",
+    "# @constraint(m, [j=1:num_events], sum(x[i,j] for i in 1:num_hours) >= time_limits[j,1])\n",
     "\n",
     "# The total cost of the orientation week is less than the total budget\n",
-    "# @constraint(m,  sum(z[j]*cost_per_worker*workers_needed[j] for j in 1:num_events) <= budget)\n",
+    "@constraint(m,  sum(z[j]*cost_per_worker*workers_needed[j] for j in 1:num_events) <= budget)\n",
     "\n",
     "# Each person in the group must get some baseline of sastisfaction\n",
     "@constraint(m, [p=1:num_students], sum(sum(survey_data[p,j]*x[i,j] for i in 1:num_hours) for j in 1:num_events) >= min_satisfaction)\n",
@@ -357,17 +371,16 @@
     "@constraint(m, [j=1:num_events], sum(hours_open[i,j]*x[i,j] for i in 1:num_hours) == 0)\n",
     "\n",
     "\n",
-    "\n",
     "# The group can only do an event once\n",
     "# lambda 1 one when the group starts or stops an event\n",
-    "# for j in 1:num_events\n",
+    "for j in 1:num_events\n",
     "\n",
-    "#     for i in 2:num_hours\n",
-    "#         @constraint(m, lambda[i,j] >= x[i,j] - x[i-1,j])\n",
-    "#         @constraint(m, lambda[i,j] >= -x[i,j] + x[i-1,j])\n",
-    "#     end\n",
-    "# end\n",
-    "# @constraint(m, [j=1:num_events], sum(lambda[i,j] for i in 1:num_hours) <= 2)\n",
+    "    for i in 2:num_hours\n",
+    "        @constraint(m, lambda[i,j] >= x[i,j] - x[i-1,j])\n",
+    "        @constraint(m, lambda[i,j] >= -x[i,j] + x[i-1,j])\n",
+    "    end\n",
+    "end\n",
+    "@constraint(m, [j=1:num_events], sum(lambda[i,j] for i in 1:num_hours) <= 2)\n",
     "\n",
     "# Our objective is to maximize satisfaction!\n",
     "@objective(m, Max, sum(sum(sum(survey_data[p,j]*x[i,j] for p in 1:num_students) for i in 1:num_hours) for j in 1:num_events))\n",
